reporte c.. no furula

--- a/src/main/resources/templates/fragments/comite/comiteform.html
+++ b/src/main/resources/templates/fragments/comite/comiteform.html
@@ -85,7 +85,7 @@
             <div class="form-group">
                 <label class="col-sm-2 control-label">Hasta:</label>
                 <div class="col-sm-10">
-                    <input type="text" class="form-control fecha_dies"  placeholder="YYYY-MM-DD" required="true" th:field="*{fechahastacomite}"/>
+                    <input type="text" class="form-control "  placeholder="YYYY-MM-DD" required="true" th:field="*{fechahastacomite}"/>
                 </div>
             </div>
         
